force-app/main/default/objects/XFILES__Link_Activity_History__c/XFILES__Link_Activity_History__c.object-meta.xml
<CustomObject>
    <description>Link Activity History</description>
    <label>Link Activity History</label>
    <nameField>
        <displayFormat>LA{0000}</displayFormat>
        <label>Activity History No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Link Activity History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>