force-app/main/default/objects/XFILES__Link_Activity_History__c/fields/XFILES__Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Activity_Type__c</fullName>
    <description>Activity Type</description>
    <inlineHelpText>Activity Type</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upload</fullName>
                <default>true</default>
                <label>Upload</label>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Inbound Email Attachment</fullName>
            </value>
            <value>
                <fullName>Outbound Email Attachment</fullName>
            </value>
            <value>
                <fullName>View/Download</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Unlink</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Share</fullName>
            </value>
            <value>
                <fullName>Preview</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Linked as Attachment</fullName>
            </value>
            <value>
                <fullName>Linked as Feed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>