force-app/main/default/objects/XFILES__Link_Activity_History__c/fields/XFILES__Client_Details__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Client_Details__c</fullName>
    <description>Client Details</description>
    <inlineHelpText>Client Details of User like OS,  Browser details</inlineHelpText>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>