force-app/main/default/objects/XFILES__Link_Activity_History__c/fields/XFILES__Description__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Description__c</fullName>
    <description>Activity Description</description>
    <inlineHelpText>Activity Description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>