force-app/main/default/objects/XFILES__Link_Activity_History__c/fields/XFILES__Ecd_Record__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Ecd_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ecd Record</label>
    <referenceTo>XFILES__External_Content_Detail__c</referenceTo>
    <relationshipLabel>Link Activity History (Ecd Record)</relationshipLabel>
    <relationshipName>Link_Activity_History1</relationshipName>
    <type>Lookup</type>
</CustomField>