force-app/main/default/objects/XFILES__Link_Activity_History__c/fields/XFILES__External_Content_Audit_Detail__c.field-meta.xml
<CustomField>
    <fullName>XFILES__External_Content_Audit_Detail__c</fullName>
    <label>External Content Audit Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>