force-app/main/default/objects/XFILES__Link_Activity_History__c/fields/XFILES__File_Name__c.field-meta.xml
<CustomField>
    <fullName>XFILES__File_Name__c</fullName>
    <label>File Name</label>
    <type>TextArea</type>
</CustomField>