force-app/main/default/objects/XFILES__Link_Activity_History__c/fields/XFILES__File_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__File_Type__c</fullName>
    <label>File Type</label>
    <type>TextArea</type>
</CustomField>