force-app/main/default/objects/XFILES__Link_Activity_History__c/fields/XFILES__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Object_Name__c</fullName>
    <label>Object Name</label>
    <type>TextArea</type>
</CustomField>